# ecs-opnegl-engine

./: .gitignore  CMakeLists.txt  README.md  issues.md
docs/: UML.md  issues.md
include/: Camera.h  Component.h  ECS.h  Entity.h  Mesh.h  RenderSystem.h
shaders/: basic.fragment.glsl  basic.vertex.glsl
src/: Camera.cpp  Mesh.h  ModelImporter.h  RenderSystem.cpp  Shader.cpp  main.cpp  model.cpp  model.h
src/Core/ECS/Component/: CameraComponent.h  MaterialComponent.h  MeshComponent.h  TransformComponent.h
src/Core/Image/: ImageData.h  ImageLoader.cpp  ImageLoader.h
src/ECS/: ECS.h
src/ECS/Component/: Component.h
src/ECS/System/: RenderSystem.h
src/Game/: Camera.h  main.cpp
src/Game/Camera/: CameraControlSystem.cpp  CameraControlSystem.h
src/Game/Input/: InputMapping.cpp  InputMapping.h  InputState.h
src/Graphics/Model/: AssimpImporter.cpp  AssimpImporter.h  Mesh.cpp  Mesh.h  ModelData.h  ModelRegistry.cpp  ModelRegistry.h  model.cpp  model.h
src/Graphics/Renderer/: RenderSystem.cpp  RenderSystem.h  Shader.cpp  Shader.h
src/Utils/: GPUBufferUtils.cpp  GPUBufferUtils.h  TextureUtils.cpp  TextureUtils.h
